--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,47 +1,45 @@
-version: '3.8'
-
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: laravel_app
-    working_dir: /var/www/html
     volumes:
-      - ./:/var/www/html
+      - .:/var/www/html
     networks:
-      - laravel
-
-  web:
-    image: nginx:alpine
-    container_name: laravel_web
-    ports:
-      - "8000:80"
-    volumes:
-      - ./:/var/www/html
-      - ./docker/nginx:/etc/nginx/conf.d
-    depends_on:
-      - app
-    networks:
-      - laravel
+      - ninja-network
 
   db:
     image: mysql:8.0
-    container_name: laravel_db
-    ports:
-      - "3306:3306"
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laravel
       MYSQL_USER: laravel
-      MYSQL_PASSWORD: secret
-    volumes:
-      - dbdata:/var/lib/mysql
+      MYSQL_PASSWORD: password
     networks:
-      - laravel
+      - ninja-network
+
+  web:
+    image: nginx:alpine
+    ports:
+      - "8000:80"
+    volumes:
+      - .:/var/www/html
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - ninja-network
+
+  vite:
+    image: node:18-alpine
+    working_dir: /var/www/html
+    volumes:
+      - .:/var/www/html
+    ports:
+      - "5173:5173"
+    command: sh -c "npm install && npm run dev -- --host"  # Adicionando --host aqui
+    networks:
+      - ninja-network
 
 networks:
-  laravel:
-
-volumes:
-  dbdata:
+  ninja-network:
+    driver: bridge
