--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      SERVICE_NAME: app
+      SERVICE_TAGS: dev
     volumes:
       - .:/var/www/html
     networks:
@@ -10,12 +13,16 @@ services:
 
   db:
     image: mysql:8.0
-    restart: always
+    container_name: db
+    restart: unless-stopped
+    tty: true
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laravel
       MYSQL_USER: laravel
       MYSQL_PASSWORD: password
+    ports:
+      - "3306:3306"
     networks:
       - ninja-network
 
